# PathForward

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  RESPONSIBLE-AI.md  agent.yaml  azure.yaml  eval.yaml  pyproject.toml  requirements.txt  tasks.ps1
docs/: DEMO-STORYBOARD.md  DEPLOY.md
eval/: README.md  eval-groundedness.json  eval-groundedness.md  foundry-hosted-dashboard.jsonl  foundry-prompt-dashboard.jsonl  hosted-agent-abstain.json  hosted-agent-abstain.md  hosted-agent-groundedness.json  hosted-agent-groundedness.md  hosted-agent-redteam-asr.json  hosted-agent-redteam-asr.md  orchestrator-groundedness.json  orchestrator-groundedness.md  orchestrator-redteam-asr.json  orchestrator-redteam-asr.md  prompt_orchestrator_abstain.yaml  prompt_orchestrator_fabric.yaml  prompt_orchestrator_mint.yaml  prompt_orchestrator_safety.yaml  prompt_orchestrator_smoke.yaml  redteam-asr.json  redteam-asr.md
hosted/: __init__.py
pathforward/: __init__.py  captured_route.py  config.py  hosted_orchestrator.py  scorer.py  skills.py  tool_surface.py  toolbox_mcp.py
scripts/: build_mirror.py  build_search_index.py  build_toolbox.py  capture_and_score_route.py  correlate_eval_appinsights.py  demo_runtime.py  deploy_function_app.ps1  eval_groundedness.py  eval_hosted_agent_live.py  eval_orchestrator_live.py  export_fabric_tables.py  export_web_fixture.py  generate_data.py  load_fabric_lakehouse.py  probe_orchestrator_stream.py  provision_a2a_orchestrator_toolbox.py  provision_foundry_specialist_agents.py  (+31 more)
(+205 files in other folders)
